--- a/web/components/Layout/Header/Header.module.scss
+++ b/web/components/Layout/Header/Header.module.scss
@@ -1,4 +1,5 @@
 @use "styles/vars" as *;
+@import url("https://fonts.googleapis.com/css2?family=Train+One&display=swap");
 
 $mobile-header-height: 65px;
 
