--- a/web/components/Layout/Header/Header.module.scss
+++ b/web/components/Layout/Header/Header.module.scss
@@ -1,4 +1,4 @@
-@use "styles/vars" as *;
+@use "styles/vars" as v;
 @import url("https://fonts.googleapis.com/css2?family=Train+One&display=swap");
 
 $mobile-header-height: 65px;
@@ -72,7 +72,7 @@ $mobile-header-height: 65px;
   }
 
   // PC
-  @media only screen and (min-width: $screen-large) {
+  @media only screen and (min-width: v.$screen-large) {
     .logo {
       left: 0;
       margin-left: 5%;
@@ -117,6 +117,19 @@ $mobile-header-height: 65px;
     .logo {
       margin: 0; // Remove the auto centering on mobile
       left: 1%;
+    }
+  }
+}
+
+@media (max-width: #{v.$breakpoint-tablet - 1px}) {
+  .header {
+    .logo {
+      margin-left: 2%;
+    }
+
+    .burgerButton {
+      margin-right: 4%;
+      display: block;
     }
   }
 }
