--- a/web/styles/Home.module.scss
+++ b/web/styles/Home.module.scss
@@ -47,17 +47,19 @@ $mobile-column-short: 30px;
   display: flex;
   align-items: stretch;
   justify-content: space-between;
-  border-bottom: 2px solid v.$secondary-color;
+  border-bottom: 8px solid v.$border-color-primary;
   background-color: color.adjust(v.$background-dark, $lightness: -2%);
   width: 100%; // Ensure it spans the wrapper
-  height: 60px;
+  height: 100px;
   position: relative;
 
   // Mobile adjustments if needed
   @media (max-width: #{v.$breakpoint-tablet - 1px}) {
     padding: 0;
     flex-direction: row;
-    justify-content: center; // Center on mobile
+    justify-content: space-between; // Center on mobile
+    align-items: center;
+    height: 60px;
   }
 }
 
@@ -69,50 +71,51 @@ $mobile-column-short: 30px;
   justify-content: center;
   text-align: center;
   padding: 0 v.$space-lg;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    135deg,
+    v.$primary-color 0%,
+    v.$primary-color 7%,
+
+    v.$background-light 7%,
+    v.$background-light 10%,
+
+    v.$primary-color 10%,
+    v.$primary-color 13%,
+
+    v.$background-light 13%,
+    v.$background-light 16%,
+
+    v.$text-color-primary 16%,
+    v.$text-color-primary 19%,
+
+    v.$background-light 19%,
+    v.$background-light 20%,
+
+    v.$background-light 80%,
+    v.$background-light 81%,
+
+    v.$text-color-primary 81%,
+    v.$text-color-primary 84%,
+
+    v.$background-light 84%,
+    v.$background-light 87%,
+
+    v.$primary-color 87%,
+    v.$primary-color 90%,
+
+    v.$background-light 90%,
+    v.$background-light 93%,
+
+    v.$primary-color 93%,
+    v.$primary-color 100%
+  );
 
   @media (max-width: #{v.$breakpoint-tablet - 1px}) {
     padding: 0 v.$space-md;
     border-left: 2px solid v.$border-color;
     border-right: 2px solid v.$border-color;
-
-    background: linear-gradient(
-      135deg,
-      v.$primary-color 0%,
-      v.$primary-color 7%,
-
-      v.$background-light 7%,
-      v.$background-light 10%,
-
-      v.$primary-color 10%,
-      v.$primary-color 13%,
-
-      v.$background-light 13%,
-      v.$background-light 16%,
-
-      v.$text-color-primary 16%,
-      v.$text-color-primary 19%,
-
-      v.$background-light 19%,
-      v.$background-light 20%,
-
-      v.$background-light 80%,
-      v.$background-light 81%,
-
-      v.$text-color-primary 81%,
-      v.$text-color-primary 84%,
-
-      v.$background-light 84%,
-      v.$background-light 87%,
-
-      v.$primary-color 87%,
-      v.$primary-color 90%,
-
-      v.$background-light 90%,
-      v.$background-light 93%,
-
-      v.$primary-color 93%,
-      v.$primary-color 100%
-    );
   }
 }
 
@@ -125,7 +128,7 @@ $mobile-column-short: 30px;
   font-size: clamp(1.8rem, 4vw, 2.2rem); // Responsive title size
   line-height: 1.2; // Adjust line height
   color: v.$text-color-primary;
-  padding: v.$space-sm 0; // Space around title
+  padding: v.$space-md 0 v.$space-sm 0; // Space around title
 
   span {
     color: v.$secondary-color; // Use variable
