--- a/web/components/GameGrid/Switch/Switch.module.css
+++ b/web/components/GameGrid/Switch/Switch.module.css
@@ -1,25 +1,33 @@
 .arrow-up {
   display: block;
   position: absolute;
-  margin-top: 8px;
-  margin-left: 20px;
+  margin-left: 10px;
   width: 0;
   height: 0;
   border-left: 8px solid transparent;
   border-right: 8px solid transparent;
   border-bottom: 8px solid #07aae2;
+
+  @media (max-width: 480px) {
+    margin-left: 20px;
+  }
 }
 
 .arrow-down {
   display: block;
   position: absolute;
-  margin-top: 8px;
   margin-left: 20px;
   width: 0;
   height: 0;
   border-left: 8px solid transparent;
   border-right: 8px solid transparent;
   border-top: 8px solid #07aae2;
+
+  @media (max-width: 480px) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .arrow-up:hover {
