--- a/web/components/GameGrid/Toggle/Toggle.module.css
+++ b/web/components/GameGrid/Toggle/Toggle.module.css
@@ -2,8 +2,15 @@
   position: relative;
   display: inline-block;
   width: 30px;
-  height: 15px;
+  height: 12px;
+  outline: 1px solid #ffffffcb;
+  border-radius: 10px;
+  top: -1;
+  left: 0;
+  right: 0;
+  bottom: -1;
 }
+
 
 .switch input {
   opacity: 0;
@@ -26,10 +33,10 @@
 .slider:before {
   position: absolute;
   content: "";
-  height: 10px;
-  width: 10px;
-  right: 2.5px;
-  bottom: 2.5px;
+  height: 8px;
+  width: 8px;
+  right: 2px;
+  bottom: 2px;
   background-color: white;
   -webkit-transition: 0.4s;
   transition: 0.4s;
@@ -38,7 +45,7 @@
 
 
 input:checked + .slider {
-  background-color: #404040;
+  background-color: #242424;
 }
 
 input:focus + .slider {
