--- a/web/styles/Stats.module.scss
+++ b/web/styles/Stats.module.scss
@@ -1,9 +1,21 @@
+@use "sass:color";
+@use "styles/vars" as v;
+@use "sass:math";
+
 /* Container & Layout */
 .container {
   padding: 1rem;
   width: 90%;
   height: 90%;
   margin: 0 auto;
+}
+
+.teamList {
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(16, 1fr);
+  grid-row-gap: 1.5rem;
+  margin: auto;
 }
 
 .leaderboardsContainer {
@@ -192,4 +204,48 @@
   .grid {
     grid-template-columns: repeat(2, 1fr);
   }
+}
+
+.teamsSection {
+  width: 90%;
+  margin: 0;
+}
+
+.teamsTitle {
+  color: #07aae2;
+  font-weight: 700;
+  font-size: 22px;
+  margin-bottom: 8px;
+}
+
+.teamListItem {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: v.$font-family-accent;
+  text-decoration: none;
+  color: v.$color-white;
+  width: auto;
+  font-weight: 600;
+  margin: auto;
+}
+
+.teamLogo {
+  width: 48px;
+  height: 48px;
+  object-fit: contain;
+}
+
+.teamAbbreviation {
+  font-size: 13px;
+  text-align: center;
+  color: #fff;
+}
+
+.teamName {
+  font-size: 12px;
+  text-align: center;
+  color: #aaa;
+  margin-top: 2px;
 }
