--- a/web/styles/PlayerStats.module.scss
+++ b/web/styles/PlayerStats.module.scss
@@ -56,7 +56,7 @@
   border-bottom: none;
 }
 
-tbody tr {
+.playerStatsTable tbody tr {
   &:nth-child(even) td {
     background-color: v.$background-dark; // Darker for even rows
   }
