--- a/web/styles/TeamStatsPage.module.scss
+++ b/web/styles/TeamStatsPage.module.scss
@@ -102,7 +102,7 @@
   border-bottom: none;
 }
 
-tbody tr {
+.teamStatsTable tbody tr {
   &:nth-child(even) td {
     background-color: v.$background-dark;
   }
