--- a/web/styles/vars.scss
+++ b/web/styles/vars.scss
@@ -50,7 +50,7 @@ $border-color-secondary: #505050; // Definition 1
 $focus-color: rgb(255, 193, 8); // Definition 1
 $warning-color: #ffcc00; // Definition 1
 $success-color: #00ff99; // Definition 1
-$danger-color: #ff6384; // Definition 1
+$danger-color: #ff6384; // Definition 1 #
 
 // --- Base Colors Block ---
 $color-green: #00ff99;
